--- a/dmarket.bib
+++ b/dmarket.bib
@@ -1,8 +1,89 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
+@article{syrgkanis2016efficient,
+  title={Efficient Algorithms for Adversarial Contextual Learning},
+  author={Syrgkanis, Vasilis and Krishnamurthy, Akshay and Schapire, Robert E},
+  journal={arXiv preprint arXiv:1602.02454},
+  year={2016}
+}
+
+@inproceedings{syrgkanis2015fast,
+  title={Fast convergence of regularized learning in games},
+  author={Syrgkanis, Vasilis and Agarwal, Alekh and Luo, Haipeng and Schapire, Robert E},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={2989--2997},
+  year={2015}
+}
+
+@phdthesis{witkowski2014robust,
+  title={Robust Peer Prediction Mechanisms},
+  author={Witkowski, Jens},
+  year={2014},
+  school={Ph. D. Dissertation, Department of Computer Science, Albert-Ludwigs-Universit{\"a}t Freiburg}
+}
+
+@inproceedings{zhang2014elicitability,
+  title={Elicitability and knowledge-free elicitation with peer prediction},
+  author={Zhang, Peter and Chen, Yiling},
+  booktitle={Proceedings of the 2014 international conference on Autonomous agents and multi-agent systems},
+  pages={245--252},
+  year={2014},
+  organization={International Foundation for Autonomous Agents and Multiagent Systems}
+}
+
+@inproceedings{waggoner2014output,
+  title={Output agreement mechanisms and common knowledge},
+  author={Waggoner, Bo and Chen, Yiling},
+  booktitle={Second AAAI Conference on Human Computation and Crowdsourcing},
+  year={2014}
+}
+
+@article{della2012crowd,
+  title={Crowd \& prejudice: An impossibility theorem for crowd labelling without a gold standard},
+  author={Della Penna, Nicol{\'a}s and Reid, Mark D},
+  journal={Collective Inteligence 2012, arXiv preprint arXiv:1204.3511},
+  year={2012}
+}
+
+@article{epstein1999revelation,
+  title={A revelation principle for competing mechanisms},
+  author={Epstein, Larry G and Peters, Michael},
+  journal={Journal of Economic Theory},
+  volume={88},
+  number={1},
+  pages={119--160},
+  year={1999},
+  publisher={Elsevier}
+}
 
 %% Created for Nikete at 2016-08-18 10:58:21 +0200 
+@article{jehiel2001efficient,
+  title={Efficient design with interdependent valuations},
+  author={Jehiel, Philippe and Moldovanu, Benny},
+  journal={Econometrica},
+  volume={69},
+  number={5},
+  pages={1237--1259},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{beygelzimer2012learning,
+  title={Learning performance of prediction markets with Kelly bettors},
+  author={Beygelzimer, Alina and Langford, John and Pennock, David M},
+  booktitle={Proceedings of the 11th International Conference on Autonomous Agents and Multiagent Systems-Volume 3},
+  pages={1317--1318},
+  year={2012},
+  organization={International Foundation for Autonomous Agents and Multiagent Systems}
+}
+
+@book{berry1985bandit,
+  title={Bandit problems: sequential allocation of experiments (Monographs on statistics and applied probability)},
+  author={Berry, Donald A and Fristedt, Bert},
+  year={1985},
+  publisher={Springer}
+}
 
 @article{caragiannis2015bounding,
   title={Bounding the inefficiency of outcomes in generalized second price auctions},
