--- a/twosides.tex
+++ b/twosides.tex
@@ -58,37 +58,24 @@ We finish by presenting a mechanism that combines both ideas, and explore some o
 
 \section{Model}
 
-
+The game occurs over $T$ steps, at each step : 
 \begin{enumerate}
-
-\item{A signal (feature) vector $\vecb{s}_{t}$ known as the
-   \emph{context} or \emph{signals}.  Associated with each arm $a$ is a real-valued
-   payoff $r_{t,a}\in[0,1]$ that can be related to the signals
-   $\vecb{s}_{t}$ in an arbitrary way.  We denote by $S$ the set of
-   contexts, and $(r_{t,1},\ldots,r_{t,K})$ the payoff vector.  
-   Furthermore, assume $(\vecb{s}_t,r_{t,1},\ldots,r_{t,K})$ is drawn i.i.d. from some joint
-   distribution $P$.} 
-% %
- \item{Based on observed payoffs in previous trials and the current set of reportedsignals (contexts) $\vecb{s}_t$, $\Aalg$ chooses an arm $a_t\in\Aset$, and receives payoff $r_{t,a_t}$.  It is important to emphasize here that \emph{no} feedback information (namely, the payoff $r_{t,a}$) is observed for \emph{unchosen} arms $a \ne a_t$.}
-\item{The algorithm then improves its arm-selection strategy with all information it observes, $(\vecb{s}_{t,a_t},a_t,r_{t,a_t})$.} \label{def:bandit-feedback}
- \end{enumerate}
+\item a new subject $t$ arrives and each $i$ of $K$ experts receives a signal $s_{t,i}$ for that subject.
+\item Each expert $i$ reports to the mechanism $\hat{s}_{t,i}$, and the mechanism selects a chosen action $c_t$
+\item The subject observes $c_t$, picks an action $a_t$, and receives a reward $r_t$.
+\item The mechanism provides feedback about $s_t$, $c_t$, $a_t$, $r_t$ to experts.
+\end{enumerate}
+After the final step, the mechanism makes payments $\pi_i$ to each expert.
 
 
-
-% The game occurs over $T$ steps, at each step: 
-% \begin{itemize}
-% \item a new subject $t$ arrives and each $i$ of $K$ experts receives a signal $s_{t,i}$ for that subject.
-% \item Each expert $i$ reports to the mechanism $\hat{s}_{t,i}$, and the mechanism selects a chosen action $c_t$
-% \item The subject observes $c_t$, picks an action $a_t$, and receives a reward $r_t$.
-% \end{itemize}
+It is worth noting having the signals be represented a vector is without loss of generality. For example, it can be a one hot encoding of the underlying signal). It leads to some abuse of notation, as we still denote by $s_{t,i}$ the subset of the variables encoding experts $i$ signal in period $t$. It does, however, lead to a better mapping with the contextual bandit literature, tools from which will be crucial to our results. 
 
 At the end of the final period the mechanism makes payments to the experts $pi_i( \cup \hat{s}_t,c_t,r_t,a_t \forall t \in T)$.
 
+\section{A Sequence of repeated one-shot-efficient mechanisms is inefficient}
 
-\section{A sequence of one shot mechanisms is inefficient}
 
-
-Even with access to the prior by the mechanism (where the VCG styl mechanisms provide efficiency) or in situations in which the bidding mechanism is efficient in the one shot case.
+Even with access to the prior by the mechanism (where the VCG styl mechanisms provide efficiency) or in situations in which the bidding mechanism is efficient in the one shot case, repeated use of such mechanisms fails to achieve the efficient outcome in the sequential setting. 
 
 Running the (single subject) efficient direct action elicitation mechanism repeatedly, results in choosing the arm with the maximum posterior expected reward at each step $t$ and using the payment rule:
 
@@ -100,55 +87,44 @@ Running the (single subject) efficient direct action elicitation mechanism repea
 \end{cases}
 \]
 
-With $\alpha < 1/NT$ so as to presere rational entry by the subject by limiting the payments.
-The repeated single shot mechanism thus creates incentives that are equivalent to a greedy policy: it only incentivizes exploitation and not exploration.
+As usual with $\alpha < 1/N$ so as to preserve rational entry by the subjects by limiting the payments.
+The repeated use of single-subject-efficient mechanism thus is equivalent to a fully greedy policy: only exploitation and no exploration.
+
+\begin{lem}
+No exploration with truthful reports in the repeated single subject VCG style mechanism.
+\end{lem}
+
+This is inmediate from the definition of the single subject VCG style mechanism: it selects the arm that maximizes the rewards for that period given the reports, if the reports are turhtful this is the ihghest expected reward arm on that period. 
+
+\begin{defn}[full disclosure]
+We say an optimal decision elicitation mechanism has \emph{full disclosure} if all experts recieve feedback about the value of $c_t$, $a_t$ and $r_t$ in every period.
+\end{defn}
+
+
+\begin{eg}
+3 agents, they all see signals which in expectation encode the arm with highest expectation, but they have to learn how to interpret them (which requires exploration), plus one safe arm that has higher expected reward than randomizing over the other arms (but lower than what can be obtained once you have learned to use the signals, i.e. lower than the expected rewards of the optimal policy mapping context to arms)
+\end{eg}
+
+More broadly
+
+\NDP{There are situations (like a expert has the signal needed to unlock for each peirod the meaning of the signals) where we do get exploration, so this needs to be softened....}
+\begin{lem}
+No Exploration with full disclosure in the repeated one shot second price bidding mechanism.
+\end{lem}
+
+
 
 On possible attempt to fix this would be by only revealing the outcome to the winning bidder, thus allowing them to internalize the informational advantage in future rounds payoffs. 
 This  internalizies the benefits of explorations, yet it prevents the other experts from learning in those rounds when they do not win, severely limiting the situations in which the mechanism can be efficient. 
-
-\NDP{TODO: This could use some simplification.}
-\begin{eg}[3 Experts and 3 actions and 2 regimes]\label{eg:2regimes}
-	Consider our model with 3 experts, 3 actions, where one of the actions $E[r|c=1]=0.51$ and the first expert recieves a signal at the start of every period with the identity of this action. For the other actions a priori $E[r|c\neq1]=0.5$ but conditional on the regime it is known that for one of them the reward are allways 0 and for the other they are always 1. The seccond and third expert on each period receive a signal that indicates if the regime has changed since the last round, but do not know the identify of the regime. Regime changes have a constant probability on any given period.
-\end{eg}
-
-Note that with access to all signals the efficient outcome involves sampling one the actions that have the $E[r|c\neq1]=0.5$ on the first round. After that point it is allways possible given the signals to identify the action with reward 1 and play it, thus in the full information aggregation case the reward is $T-1$ where T is the number of time periods. 
-
-
-\begin{def}[full disclosure]
-We say an optimal decision elicitation mechanism has \emph{full disclosure} if all experts recieve feedback about the value of $c$, $a$ and $r$ in every period.
-\end{def}
-
-
-\begin{lem}
-No Exploration (in equilibrium) with full disclosure in the repeated one shot second price bidding mechanism.
-\end{lem}
-
-\begin{proof}
-Example~\ref{eg:2regimes} is a witness. If we have full disclosure then if agent 1 is the highest bidder they always plays the action with expected reward $0.75$. If one of the other agents wins and chooses to explore, they gain the same information as the non-winning other agent, and in the next period both have (in expectation) the same valuation, thus the seccond price bid is the same as the first price, and the expected payments to the agent are 0, while the payment to win over the first agent must be $\alpha 0.75$ and the expected payment $\alpha 0.5033$
-\end{proof}
-
-
-% \begin{lem}
-% No Exploration (in equilibrium) with full disclosure in the repeated one shot direct VCG mechanism.
-% \end{lem}
-
-% \begin{proof}
-% Example~\ref{eg:2regimes} is a witness. If we have full disclosure then if agent 1 is the \emph{pivotal} agent (in the first period) 
-% . If one of the other agents wins and chooses to explore, they gain the same information as the non-winning other agent, and in the next period both have (in expectation) the same valuation, thus the seccond price bid is 
-% \end{proof}
-
-
-On the other hand, if we reveal the outcome and reported signals of the round to all experts, no agent can internalize the information revelation benefits that comes from the choice of an action with a priori expected suboptimal reward.
+More generally, partial revelation policies, where only some of the periods are revealed (in the style of  \cite{mansour2015bayesian} ) are also inefficient in general. 
+ 
+\NDP{Can we characterize when this inneficiency arises? it seems very general through clealry not always; basically the experts need to learn (their signals dont point a priri the optimal action bt the mapping cna be learnt from experience) and the signals are spread outbetween different experts (if there is a single one)}
 
 For many problems the sequential use of mechanisms while suboptimal is not too bad inthe sense that the loss of efficincy fo the mechanism can be bounded relative to the optimum (see background chapter for a brief overvie of such results).
 This is not the case for sequential optimal action elicitaiton. Repeating any efficient one shot mechanism can lead to linearly worse performance than the optimal sequential mechanism on the same problem. In Example~\ref{eg:2regimes} the regret of the  seccond price bidding mechanism is $0.25(T-1)$ since the first agent wins and selects the optimal arm given his information set.
 
 
 
-% \begin{eg}[]
-% let everyone have the same prior and signals, then upon observing the outcome, everyone has the same posterior, and thus any benefits from signals complementarity with exploration will also appear in other reports, leading the winners report not to be pivotal (change the chosen action) and thus payment 0.
-% , denying the benefits form having risked a ex-ante suboptimal action to those who take it. 
-% \end{eg}
 
 % \DBA{this result (that price mechanisms can discourage exploration unless ``intellectual property'' is built in) is very nice. I imagine there's some kind of literature about this, but have no idea what formalism the IP guys would use.}
 % \NDP{There is a positive externality on future time periods from exploration today, so we want to internalize those benefits for the current decision maker so as to align his incentives. It in in a line of welfare eocnomics that stretches back to 1920 formally with Pigou and the original articulation is atttributed to  Sidgwick or Marshall, but really is a bunch of 19th century economists who learned calculus more or less figured it out.
@@ -161,9 +137,8 @@ This is not the case for sequential optimal action elicitaiton. Repeating any ef
 
 
 
+One approach would be to seek a direct mechanism which internatilizes exploration; this is in theory relatively straightfoward, the dynamic VCG style mechansim , however, the requirements that the mechanism now have access tot he common prior over sequences makes it completly impractical.
 
-
-%\section{A Direct Mechanism which internatilizes exploration}
 % TODO ? you  have to take the expected value of the future rewards with the others signals but without exploration as the baseline which to reward?
 
 
@@ -233,6 +208,11 @@ Example~\ref{eg:2regimes} is a witness. If we have full disclosure then if agent
 
 %  \subsection{A Sufficient Condition for Efficiency}
 
+
+%  \begin{defn}
+%  Expert signals only informative about one action at one time period (and this is common knowledge) \DBA{is this a lemma or an assumption?}
+%  \end{defn}
+
 %  \begin{lem}
 %  One Action per Expert is not enough for incentive compatibility
 %  \end{lem}
@@ -240,9 +220,9 @@ Example~\ref{eg:2regimes} is a witness. If we have full disclosure then if agent
 % % even when each expert observes the signal that is informative of just one action, versus when the expert observes a statistic about an action (say the mean of a given arm) which can still be informative of the mean of other arms. Note in the one shot setting this doesnt hold, and ne qctin per expert is sufficient, this is becuase the seccond price auction is effective in cuting off manipulation there, but here the effect on future beliefs and thus bids in later rounds is not cut (which in one shot it is inexistent)
 
 
-%  \begin{lem}
+%  \begin{defn}
 %  Expert signals only informative about one action at one time period (and this is common knowledge) \DBA{is this a lemma or an assumption?}
-%  \end{lem}
+%  \end{defn}
 
 
 %  Note that if a signal is informative about other acions, then it allready fails at $T=1$, as we saw in the previous chapter. The basic reason for this that there is no way for the mechanism to conbine signals of different experts beyond their projection to the price space, and cmplementary signals cannot be revealed in this manner. \DBA{citation or formal explanation}
@@ -264,68 +244,62 @@ The reason why we need the prior in the one shot case to be able to evaluate the
 We now consider a setting where the experts submit their signals, however, unlike in the .
  While we saw that there was a revelating equilibrium, the mechanism failed the property of paying for useless experts. We show that the repeated nature of the problem can be used to overcome payments to useless experts. 
 
-We do this in two parts; by reducing the problem to a contextual bandit algorithm where the context is determined by the signals reported by all experts, and then using the randomization used by such algorithms to construct unbiased estimators of the gain in rewards brough about by a given agents signals, and making their reward proportional to this. \DBA{you need to insert a mini-survey of the contextual bandit literature. As I understand it, it's only recently (Langford's last few papers) that we've gotten to the point where contextual bandits are fully usable}
+We do this in two parts; by reducing the problem to a contextual bandit algorithm where the context is determined by the signals reported by all experts, and then using the randomization used by such algorithms to construct unbiased estimators of the gain in rewards brough about by a given agents signals, and making their reward proportional to this.
 
-Assume that the subjects arrive IID. Use an unbiased contextual bandit algorithm evlauation strategy such as \cite{li2011unbiased}  Algorithm 2. %http://arxiv.org/pdf/1003.5956.pdf 
-We then evalute algorithms that do not use a given agents signal and plug those in as estimates of 
+\DBA{you need to insert a mini-survey of the contextual bandit literature. As I understand it, it's only recently (Langford's last few papers) that we've gotten to the point where contextual bandits are fully usable}
+
+Assume that the subjects arrive IID. Use an unbiased contextual bandit algorithm evlauation strategy such as \cite{li2011unbiased}  Algorithm 2 and a contextual bandit algorithm (such as \cite{syrgkanis2016efficient}) to learn to use the reported signals. %http://arxiv.org/pdf/1003.5956.pdf 
+\NDP{TODO: explicitly insert the adapted version (with probability weights in our notation)}
 
 
 \begin{mech}\label{mech:bandit}[Signals without Priors]
-
+Inputs: A contextial bandit algorithm $A$ and an unbiassed offline evaluation algorithm $E$.
 
 %$\hat{S}_{-i} = \bigcup \hat{s}_j  \forall j \neq i \in N $ then the expected reward given the others reports is:
-
-After the end of the last time period, for each expert $i$, estimate the loss that would be obtained by our algorithm A without using that experts report in it's context. 
-
-
-Since this is unbiased we can plug it in place of the seccon term $\expec[\sum_1^T \hat{r}_{-i,t}]$ in the payments. 
-
-\DBA{can you say anything about controlling variance of estimates and rewards?}
-\NDP{it is complicated, in theory for generic bandit algorithms no, but for specific ones yes, and this includes  epoch-greedy, UCB1, EXP3.P. (this is explained in {Unbiased Offline Evaluation of Contextual-bandit-based News Article Recommendation Algorithms) I dont know about Thompson Sampling. }
-
-Thus payment rule is announced as follows:
+In each time period $t$ a new subject arrives and agents receive their signals $s_t$ and then send their reports $\hat{s_{t,i}}$. A one-hot encoding of the reports is used as context in $A$ to selects an arm $c_t$, then an actual choice $a_t$ is made and reward observed $r_t$.
+At the end of the last time period, for each expert $i$, estimate the loss that would be obtained by the contextual bandit algorithm without using that experts report in it's context, denote it $E(\hat{s_{-i}},A)$
+ 
+The payment rule is as follows:
 
 \[
-    \pi_i =  \alpha (\sum_1^T r_t -  \expec[\sum_1^T \hat{r}_{-i,t}])
+    \pi_i =  \alpha (\sum_1^T r_t -  E(\hat{s_{-i}},A))
 \]
 
-Setting $\alpha<1/N$, which we can always do, bounds the total payments to the experts bellow the benefits of having the signals.
+Setting $\alpha<1/N$ ex ante bounds the total payments to the experts bellow the benefits of having the signals.
 
 \end{mech}
 
 
+Note when a agent $i$ doesnt change the exploration policy (in expectation) then , $ \expec[r_t] -  E(\hat{s_{-i}},A)) =0  $.
 
+While a optimal report is not guaranteed to be strictly truthful, the bound on the bias of the offline contextual estimator bounds how much a deviation can benefit the 
+More practically, it appears very hard for a uninformed agent to obtain profits, or for a informed agent to find a strategy other than truthfulness that has higher expected reward.
 
-Note when a agent $i$ doesnt change the exploration policy (in expectation) then , $ \expec[r_t] - \expec[\hat{r}_{-i,t}] =0  $. 
+\DBA{this is very loose}.
 
-While a truthful report is not guaranteed to be strictly truthful, the bound on the bias of the plugin payent does bound how much a deviation can benefit  and this goes to zero. More practically, it appears imposible for a uninformed agent to obtain profits, and it seems very hard for a informed agent to find a strategy other than truthfulness that has higher expected reward
-
- \DBA{this is very loose}.
-
-
-%what happened to the exploration incentives and summing over all futures? the exploraiton is taken into account by the bandit reduction, what we incentivize are reporting of signals in the form that are useful to said learner in learning the policy. 
-
-
-
-
-%Note that now the winning bid agent doesnt need to have particularly good signals, but rather has to be good at aggregating the others signals; i.e. he can be the only one with access to the prior for example.
-% hese two decompose nicely in the sense that the agent that is choosing, the winnr of auction, he is the one we want the logn term exploration incentives. the short term reward is internal, we want it so we know what information to stop using, but to actually make payments we can wait until the end of the mechanism.
-% with "enough" time periods, we can do this
-
-% signals reported context to a contextual bandit.
-%becuase the bandit algirthm randomizing, you have a valid instrument in that randomization, i.e. they can be used to crete an unbiased (but high variance at the edges) estimator of the rewards you would have obtained with some other infromation (i.e. the paralel bandits)
 
 
 
 \subsection{Limitations}
 
 
-Note exploration implies learning how to interpret the signals, this, especially in the precence of multiple experts with conflicting priors, appears like the most practical application. I.e. not too woried about what we loose from having to randomize a little the choice, since this is needed for learing. \DBA{this is very loose. Quantify tradeoffs if possible}
+Note exploration implies learning how to interpret the signals, this, especially in the precence of multiple experts with conflicting priors, appears like the most practical application. I.e. not too woried about what we loose from having to randomize a little the choice, since this is needed for learing. 
+
+\DBA{this is very loose. Quantify tradeoffs if possible}
+
 This is the generalization of contextual bandits to contextual variables (signals) provided by self-interested experts who have no ingerent interest in the outcome or action, but need t be incentivated to be truthful. 
 To the degree the experts know how to interpret the (full set) learning to do it is ineficient. 
 How to incorporate this apears as a fruitful avenue for future research; that is how can a prior over the joint set of signals be elicited? 
 
 
+
+
+%what happened to the exploration incentives and summing over all futures? the exploraiton is taken into account by the bandit reduction, what we incentivize are reporting of signals in the form that are useful to said learner in learning the policy. 
+
+
+
+% signals reported context to a contextual bandit.
+%becuase the bandit algirthm randomizing, you have a valid instrument in that randomization, i.e. they can be used to crete an unbiased (but high variance at the edges) estimator of the rewards you would have obtained with some other infromation (i.e. the paralel bandits)
 
 
 % \subsection{Incentive Compatibility for Subjects}
@@ -339,12 +313,13 @@ How to incorporate this apears as a fruitful avenue for future research; that is
 %Nasty way to solve signal manipulation for future auctins This can be side steps by dividing (endogenously) the set of experts into two, and not allowing cross bidding. Open question: is there a more elegant mechanism that does this without the separation? one naural way to do the separation is to allow the experts to see the first signal, then have them self-select into the signal or aggregation pools (they go where their return is higher, we can allow them to see where others went) .
 
 
-\section{A bid and signal mechanism without priors}
+\section{A Bid and Signal Mechanism Without Priors}
 
 
 
 %The limitation of the one shot case, of having to pay for
-The above signal only mechanism can be potentially ineficient when there are experts who know how to map the signals to optimal mechanisms. More broadly, experts can have extra information relative to the mechanisms that helps them aggregate the signals better but requires signals by other experts to be reported to them. 
+The above signal only mechanism can be potentially ineficient when there are experts who know how to map the signals to actions, and thus can help the subjects avoid some of the regret in the learning.
+More broadly, experts can have extra information relative to the mechanisms that helps them aggregate the signals better but requires signals by other experts to be reported to them. 
 
 In the previous chapter on the one shot setting, we saw that payments for  signals without a common prior that allows us to evaluate the coutnerfactual are problematic, in that we cannot reward useful experts more than useless ones. In the previous mechanism of this chapter, we saw that in the repeated setting this is not the case. We can use a unbiased estimator of what the rewards of a contextual bandit algoithm that didn't use a given agents signal could be used to fill in this counterfactual without requiring a prior.
 
@@ -352,22 +327,27 @@ This mechanism is the composition of the bid mechanism and signal mechanism.
 
 
 \begin{mech}\label{mech:bidbandit}[]
+Inputs: A contextial bandit algorithm $A$ and an unbiassed offline evaluation algorithm $E$.
 
 
 %$\hat{S}_{-i} = \bigcup \hat{s}_j  \forall j \neq i \in N $ then the expected reward given the others reports is:
 
-The payment rule is announced. In each period: all agents report signals and bids to the mechanism, the mechanism displays the other experts signals to the winner of the bidding, the winner selects the chosen action $c_t$, this is displayed to the subject, who takes action $a_t$ and receives reward $r_t$.
+The payment rule is announced.
+ In each period: all agents report signals and bids to the mechanism, the mechanism displays the other experts signals to the winner of the bidding, the winner selects the chosen action $c_t$, this is displayed to the subject, who takes action $a_t$ and receives reward $r_t$.
 
-After the end of the last time period, for each expert $i$, estimate the loss that would be obtained by a no regret algorithm without using that experts report in it's context, and use this as $\expec[\sum_1^T \hat{r}_{-i,t}]$ in the payments. The choice part of the payments is identical to the bidding.
+At the end of the last time period, for each expert $i$, estimate the loss that would be obtained by the contextual bandit algorithm without using that experts report in it's context, denote it $E(\hat{s_{-i}},A)$
 
 
-Thus payment rule thus is:
 
+The payment rule is:
 
 \[
-    \pi_i =  \sum_1^T
+    \pi_i = 
+\alpha \sum_1^T r_t -  \expec[\sum_1^T \hat{r}_{-i,t}]
++
+\sum_1^T
 \begin{cases}
-    \alpha r_t ,& \text{if } o_{i,t} = 1\\
+    \beta r_t ,& \text{if } o_{i,t} = 1\\
      0,              & \text{otherwise}
 \end{cases}
 +
@@ -377,18 +357,20 @@ Thus payment rule thus is:
        b_{\hat{2},t} ,& \text{if } o_{i,t} = 1 \land o_{i,t+1} = 0 \\
 	   0,              & \text{otherwise}
 \end{cases}
-  +  \beta \sum_1^T r_t -  \expec[\sum_1^T \hat{r}_{-i,t}]
 \]
 
- 
-
-Where $\alpha$ and $\beta$ are again set a priori. Given we are attempting not to use a prior distribution, using  constants such that  $\alpha + \beta < 1/2NT$ .
-
+Where $\alpha$ and $\beta$ are set ex ante. 
 \end{mech}
+
+
+The condition that must be satisfied to make the payments from the mechanism smaller than the surplus it brings collectively to the subjects is $ \alpha + \beta < 1/2NT$ .
+
+
 
  A major concern is that a expert would not reveal their signal turthfully and loose out on that part of the reward, if they can benefit more from being the \emph{owner} and by widtholding their signal they can supress bids of othe experts, this is a particular conceern since the other experts may be able to achieve higher rewards.
 
- concerns: the experts knwo the estimator you are using, can out bid you and then make the chocies so you realized bias is high. One way to try to avoid this would be to take out the rounds where the expert $i$ won the auction when calculating the signal value of $i$, note this is biased (it could be that those are when he brings a lot of value to both the signal and the aggregation of signals,a dn this is quite natural)
+A natural concern is that the experts know the estimator the mechanism is using, and can place a high bid and then make a combined set of reports and chocies so the estimators realized bias is high.
+One way to try to avoid this would be to take out the rounds where the expert $i$ won the auction when calculating the signal value of $i$, note this is biased (it could be that those are when he brings a lot of value to both the signal and the aggregation of signals, and this is indeed quite natural)
 
 
 
