weird symbol creeps in

--- a/market.tex
+++ b/market.tex
@@ -171,7 +171,7 @@ Consider the following adaptation of the classic complementary knowledge example
 	Let there be two experts, two actions ${\text{treatment},\text{control}}$ and four equal probability states of the world, ${A,B,C,D}$, with payoffs to the actions correspondingly as ${(0,5,1),(0.5,0),(0,0.5),(1,0.5)}$. Let one expert observe that they are in either ${A,B}$ or ${C,D}$ and the other ${B,C}$ or ${A,D}$. A uniform random strategy achieves an expected value of $0.5$. An optimal strategy with access to a single experts signal (either one) also achieves a value of $0.5$. Using both signals a optimal strategy achieves reward of $1$. Thus the VCG payments are $0.5$ to each expert when they both truthfully report and this is an equilibrium. and the mechanism improves the subjects welfare by $0.5$ while making $1$ in total payments to the experts. 
 \end{eg}
 
-In the example, by construction, it is common knowledge that each players expectation of the value of the reward conditional on either action is $0.5$, even though it is also common knowledge that the realized value of the reward conditional on one of the actions is not $0.5$, and that the traders€™ pooled information would be sufficient to determine the optimal action. 
+In the example, by construction, it is common knowledge that each players expectation of the value of the reward conditional on either action is $0.5$, even though it is also common knowledge that the realized value of the reward conditional on one of the actions is not $0.5$, and that the traders pooled information would be sufficient to determine the optimal action. 
 Thus, even if the traders repeatedly and truthfully announce their posteriors, as in \cite{geanakoplos1982we}, they will never learn the true optimal arm. 
 This illustrates a fundamental limit to the information that can be aggregated by market like mechanisms that rely on prices for information transmission (indirect mechanisms) relative to what could be known if the signals themselves where aggregated. 
 It is worth noting at this point that market scoring rule based mechanisms are one form of such indirect mechanism.
